--- a/css/aqw.css
+++ b/css/aqw.css
@@ -3,7 +3,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   margin: 0;
-  background-color: #f0f0f0;
+  background-color: #d0d0d0;
   color: #333;
   padding: 4px;
 }
@@ -26,6 +26,8 @@ article {
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   padding: 20px;
+
+  background-color: #f0f0f0;
 }
 
 /* media query for mobile devices */
