--- a/css/aqw.css
+++ b/css/aqw.css
@@ -34,6 +34,11 @@ article {
 @media only screen and (max-width: 600px) {
   article {
     width: 100%; /* take up 100% of the screen */
+	border: 0px;
+	padding: 0px;
+  }
+  body{
+	  padding: 0px;
   }
 }
 
